# Puts-Engine

./: .gitignore  48_HOUR_FREQUENCY_DATA_ANALYSIS.md  BACKTEST_FEB3_ANALYSIS.md  BACKTEST_JAN20_23_REPORT.md  BIG_MOVERS_DATA_ANALYSIS.md  BIG_MOVERS_DEEP_ANALYSIS.md  COMPLETE_SYSTEM_ANALYSIS.md  COMPREHENSIVE_DATA_ANALYSIS_FEB3.md  COMPREHENSIVE_DATA_VALIDATION_REPORT.md  DASHBOARD_DISPLAY_FIX.md  DATA_SOURCE_ANALYSIS_COMPLETE.md  DATA_SOURCE_ANALYSIS_FEB3.md  DATA_VALIDATION_REPORT.md  DISTRIBUTION_ENGINE_DATA_ANALYSIS.md  FEB3_CRASH_POSTMORTEM.md  FEB4_CRITICAL_MISS_ANALYSIS.md  FEB6_API_CALLS_REPORT.md  FEB6_DETAILED_SCHEDULE_REPORT.md  FINAL_ARCHITECT_REPORT.md  FINAL_INSTITUTIONAL_AUDIT_REPORT.md  GAMMA_DRAIN_DATA_ANALYSIS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  JAN29_CRASH_POSTMORTEM.md  LIQUIDITY_VACUUM_DATA_ANALYSIS.md  MISSED_MOVERS_FEB2_ANALYSIS.md  MISSED_PUTS_DEEP_PATTERN_ANALYSIS.md  MISSED_PUTS_JAN28_ANALYSIS.md  MISSED_PUTS_JAN30_DEEP_ANALYSIS.md  MISSED_TRADES_DEEP_ANALYSIS.md  MSFT_JAN28_POSTMORTEM.md  MSFT_MISSED_TRADE_ANALYSIS.md  OPERATIONAL_CHECKLIST.md  OPTIMIZED_SCHEDULE_PROPOSAL.md  PREDETECTION_ANALYSIS_JAN28.md  PREMARKET_ANALYSIS_JAN30.md  PUTSENGINE_COMPLETE_ANALYSIS.md  PUTSENGINE_COMPLETE_SYSTEM_ANALYSIS.md  PUTSENGINE_INSTITUTIONAL_ANALYSIS.md  README.md  (+90 more)
.claude/: settings.local.json
examples/: basic_usage.py
putsengine/: __init__.py  afterhours_scanner.py  api_budget.py  api_strategy.py  big_movers_scanner.py  capital_ramp.py  cli.py  config.py  convergence_backtest.py  convergence_engine.py  dashboard.py  dashboard_market_direction_tab.py  dashboard_predictive_tab.py  dashboard_universe_tab.py  early_warning_system.py  earnings_calendar.py  earnings_contagion.py  earnings_priority_scanner.py  email_reporter.py  engine.py  ews_attribution.py  expected_move.py  flash_alerts.py  flow_alerts_scanner.py  gap_scanner.py  health_monitor.py  intraday_scanner.py  market_direction_engine.py  market_pulse_engine.py  market_pulse_engine.py.bak  models.py  multiday_weakness_scanner.py  pre_earnings_flow.py  precatalyst_scanner.py  predictive_engine.py  pump_dump_scanner.py  scan_history.py  scheduler.py  scheduler.py.bak  scheduler_watchdog.py  (+6 more)
reports/: daily_picks_20260128_2222.json  daily_picks_20260128_2228.json  daily_picks_20260130_1504.json  daily_picks_20260131_1503.json  daily_picks_20260201_1503.json  daily_picks_20260202_1504.json  (+25 more)
(+26 files in other folders)
