[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "putsengine"
version = "1.0.0"
description = "Institutional PUT Options Trading Engine - Identifies -5% to -20% moves 1-10 days ahead"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "TradeNova"}
]
keywords = [
    "options",
    "trading",
    "puts",
    "algorithmic-trading",
    "quantitative-finance",
    "alpaca",
    "polygon",
    "unusual-whales"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "alpaca-py>=0.21.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "ta>=0.11.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "loguru>=0.7.2",
    "rich>=13.7.0",
    "cachetools>=5.3.2",
    "python-dateutil>=2.8.2",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
putsengine = "putsengine.cli:main"

[project.urls]
Homepage = "https://github.com/tradenova/putsengine"
Documentation = "https://github.com/tradenova/putsengine#readme"
Repository = "https://github.com/tradenova/putsengine"

[tool.setuptools.packages.find]
where = ["."]
include = ["putsengine*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D107"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
